--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <div class="container">
     <header>
-        <img src="https://www.amd.com/content/dam/code/images/header/amd-header-logo.svg" alt="AMD Logo">
+        <img src="https://www.amd.com/content/dam/code/images/header/amd-header-logo.svg">
         <h1>AMD Software: Adrenalin Edition</h1>
         <p style="font-size:18px; margin:10px 0 0;">Windows® 10/11 Drivers</p>
     </header>
