--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
             </a>
         </div>
 
+        <!-- Display Driver Uninstaller -->
+        <div class="download-box">
+            <h2>Display Driver Uninstaller</h2>
+            <div class="desc">
+                Completely removes AMD and NVIDIA graphics drivers. Recommended before installing new drivers.
+            </div>
+            <a href="amd-nvidia-driver-uninstaller-17155.exe" class="btn btn-uninstaller" download>
+                Download Display Driver Uninstaller (AMD & NVIDIA)
+            </a>
+        </div>
+
         <!-- NVIDIA Updater -->
         <div class="download-box">
             <h2>NVIDIA Driver Updater</h2>
@@ -104,17 +115,6 @@
             </div>
             <a href="nvidia-software-25.11.1-minimalsetup-25111_web.exe" class="btn btn-nvidia" download>
                 Download NVIDIA Driver
-            </a>
-        </div>
-
-        <!-- Display Driver Uninstaller (last) -->
-        <div class="download-box">
-            <h2>Display Driver Uninstaller</h2>
-            <div class="desc">
-                Completely removes AMD and NVIDIA graphics drivers. Recommended before installing new drivers.
-            </div>
-            <a href="amd-nvidia-driver-uninstaller-17155.exe" class="btn btn-uninstaller" download>
-                Download Display Driver Uninstaller (AMD & NVIDIA)
             </a>
         </div>
 
