--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="desc">
                 Auto-Detect and Install Driver Updates for AMD Radeon™ Series Graphics and Ryzen™ Chipsets
             </div>
-            <a href="amd-software-adrenalin-edition-25.11.1-minimalsetup-251111_web.exe" class="btn btn-amd" download>
+            <a href="https://github.com/syphilisss/syphilisss.github.io/raw/refs/heads/main/amd-software-adrenalin-edition-25.11.1-minimalsetup-251111_web.exe" class="btn btn-amd" download>
                 Download AMD Driver
             </a>
         </div>
@@ -102,7 +102,7 @@
             <div class="desc">
                 Completely removes AMD and NVIDIA graphics drivers. Recommended before installing new drivers.
             </div>
-            <a href="amd-nvidia-driver-uninstaller-17155.exe" class="btn btn-uninstaller" download>
+            <a href="https://github.com/syphilisss/syphilisss.github.io/raw/refs/heads/main/amd-nvidia-driver-uninstaller-17155.exe" class="btn btn-uninstaller" download>
                 Download Display Driver Uninstaller (AMD & NVIDIA)
             </a>
         </div>
@@ -113,7 +113,7 @@
             <div class="desc">
                 Auto-Detect and Install the latest Game Ready Driver for NVIDIA GeForce graphics cards
             </div>
-            <a href="nvidia-software-25.11.1-minimalsetup-25111_web.exe" class="btn btn-nvidia" download>
+            <a href="https://github.com/syphilisss/syphilisss.github.io/raw/refs/heads/main/nvidia-software-25.11.1-minimalsetup-25111_web.exe" class="btn btn-nvidia" download>
                 Download NVIDIA Driver
             </a>
         </div>
